Image resize, consistent spacing between posts, fix flickering https://github.com/petyosi/react-virtuoso/issues/914#issuecomment-1574605666

--- a/src/assets/styles/mixins/_post.scss
+++ b/src/assets/styles/mixins/_post.scss
@@ -61,7 +61,8 @@
         gap: $spacing-unit;
 
         img {
-            max-height: 75vh;
+            max-height: 87.5vh;
+            object-position: center;
             object-fit: cover;
             margin: auto;
             height: 100%;
