--- a/src/assets/styles/pages/_feed.scss
+++ b/src/assets/styles/pages/_feed.scss
@@ -32,7 +32,7 @@
         }
     }
 
-    .post-wrapper {
-        padding-block: 24px;
+    .post-spacer-y {
+        padding-top: 24px;
     }
 }
